# cryat

cryat-microservice/: .env  .gitignore  README.md  base.Dockerfile  docker-compose.yml  postgresql.conf  pyproject.toml  requirements-compiled.txt  requirements.txt  server.conf
cryat-microservice/admin/admin/: settings.py
cryat-microservice/api/api/: config.py  documentation.py  settings.py  urls.py
cryat-microservice/api/cryat_api/: apps.py  serializers.py  urls.py  utils.py
cryat-microservice/complete frontend/admin_panel/: SUPERUSER.html  admin_trancy.html  admin_users.html  style.css  style1.css  style2.css
cryat-microservice/complete frontend/auth_account_num/: auth_account_num.html  forauthbynick.css
cryat-microservice/complete frontend/auth_nickname/: auth_nickname.html  forauthbynick.css
cryat-microservice/complete frontend/feedback/: feedback.html  forfeed.css
cryat-microservice/complete frontend/main_page/: main_page.html
cryat-microservice/complete frontend/personal_page/: lk.html
cryat-microservice/complete frontend/reg/: forreg.css  registration.html
cryat-microservice/logger/logger/: settings.py  urls.py
cryat-microservice/microservice/: admin.Dockerfile  api.Dockerfile  logger.Dockerfile  nginx.Dockerfile  notification.Dockerfile  system_worker.Dockerfile  transaction.Dockerfile  user_manager.Dockerfile
cryat-microservice/notification/notification/: settings.py
cryat-microservice/system_worker/: manage.py
cryat-microservice/system_worker/system_worker/: asgi.py  settings.py  urls.py  wsgi.py
(+27 files in other folders)
